# morelike

./: .gitignore  Cargo.toml
src/: .#main.rs  .#sum.rs  comparer.php  file.rs  finder.rs  main.rs  pool.rs  scan.rs  sum.rs  task.rs  taskpool.rs
src/v1/: file.rs  main.0.rs  main.rs  task.rs
src/v2/: taskpool.rs
src/v3/: main.rs  scan.rs  sum.rs
