[package]
name = "morelike"
version = "0.1.0"
authors = ["xzfred <xzfred@gmail.com>"]

[dependencies]
# cdchunking = "0.2.0"
# rustsync = "0.2.3"
# crc32c-hw = "0.1"
# crc = "1.7.0"
log = "0.4"
env_logger = "0.5.6"
pretty_env_logger = "0.2"
# sha-1 = "0.7.0"
# digest = "0.7"
# generic-array = "0.9"
typenum = "1.9.0"
# clippy = { version = "*", optional = true }
# chrono = "0.4"
# time = "0.1.39"
indicatif = "0.9.0"
console = ">=0.6.1, <1.0.0"
# futures = "0.2"
crossbeam-channel = "0.2.1"
twox-hash = "1.1.0"
clap = "2.32.0"